--- a/container/orca-local.yml
+++ b/container/orca-local.yml
@@ -1,10 +1,11 @@
 job:
   preconfigured:
     kubernetes:      
-      - label: TSPlanJob        
+      - label: TSPlanJob
+        application: terratest
         cloudProvider: kubernetes
         credentials: default
-        description: Terraspin plan operation
+        description: Stage for terraspin plan operation
         account: default
         type: customTSPlanJobStage
         waitForCompletion: true
@@ -81,7 +82,8 @@ job:
                     name: opsmx-terraspin-backend-config
 
 
-      - label: TSApplyJob        
+      - label: TSApplyJob
+        application: terratest
         cloudProvider: kubernetes
         credentials: default
         description: Stage for terraspin apply operation
@@ -156,6 +158,7 @@ job:
 
 
       - label: TSDestroyJob
+        application: terratest
         cloudProvider: kubernetes
         credentials: default
         description: Stage for terraspin destroy operation
