--- a/spinterraservice-core/container/terraspinrest.yaml
+++ b/spinterraservice-core/container/terraspinrest.yaml
@@ -34,7 +34,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: restappservice
+  name: terraspinrestappservice
 spec:
   ports:
     - name: restappfrontend
@@ -42,6 +42,6 @@ spec:
       protocol: TCP
       targetPort: 9090
   selector:
-    app: simplerestapp
+    app: terraspinrestapp
   type: LoadBalancer
 
