--- a/spinterrajob-core/container/orca-local.yml
+++ b/spinterrajob-core/container/orca-local.yml
@@ -3,18 +3,18 @@ job:
     kubernetes: 
       - label: TSPlanJob
         cloudProvider: kubernetes
-        credentials: default
+        credentials: target-aks-cluster
         application: opsmx
         description: Stage for terraspin plan operation
-        account: default
+        account: target-aks-cluster
         type: customTSPlanJobStage
         waitForCompletion: true
         parameters:
           - defaultValue: "" 
-            description: Please enter the artifact account name from artifactsaccounts.json.
-            label: Artifact account
+            description: "Please enter the artifact account name from artifactsaccounts.json, Account where you have tf script(plan) present".
+            label: Tf script account
             mapping: 'manifest.spec.template.spec.containers[0].env[0].value'
-            name: Artifact account
+            name: Tf script account
           - defaultValue: "" 
             description: Please enter terraform module repo where the code is present.
             label: Terraform plan
@@ -26,20 +26,20 @@ job:
             mapping: 'manifest.spec.template.spec.containers[0].env[2].value'
             name: Override file
           - defaultValue: "" 
+            description: "Please enter the artifact account name from artifactsaccounts.json, Account where you want to save tf state".
+            label: Tf state account
+            mapping: 'manifest.spec.template.spec.containers[0].env[3].value'
+            name: Tf state account
+          - defaultValue: "" 
             description: Please enter the repo name where you want to save terraform intermediate state.
             label: State repo
-            mapping: 'manifest.spec.template.spec.containers[0].env[3].value'
+            mapping: 'manifest.spec.template.spec.containers[0].env[4].value'
             name: State repo
           - defaultValue: "" 
             description: Please enter a unique id to identify the terraform state.
             label: UUId
-            mapping: 'manifest.spec.template.spec.containers[0].env[4].value'
+            mapping: 'manifest.spec.template.spec.containers[0].env[5].value'
             name: UUId
-          - defaultValue: "" 
-            description: Please enter AWS IAM role name.
-            label: "iam.amazonaws.com/role"
-            mapping: "manifest.spec.template.metadata.annotations.'iam.amazonaws.com/role'"
-            name: "k8annotation"
         manifest:
           apiVersion: batch/v1
           kind: Job
@@ -49,19 +49,18 @@ job:
           spec:
             backoffLimit: 0
             template:
-              metadata:
-                annotations:
-                  "[iam.amazonaws.com/role]":
               spec:
                 containers:
                   - command:
                       - PlanRun.sh
                     env:
-                      - name: artifactAccount
+                      - name: tfScriptArtifactAccount
                         value: 
                       - name: plan
                         value: 
                       - name: variableOverrideFileRepo
+                        value: 
+                      - name: tfStateArtifactAccount
                         value: 
                       - name: stateRepo
                         value: 
@@ -69,52 +68,54 @@ job:
                         value: 
                       - name: component
                         value: plan
-                    image: 'docker.io/opsmx11/terraspinjob:4.0'
+                    image: 'docker.io/opsmx11/terraspinjob:5.0'
                     imagePullPolicy: Always
                     name: terraspinplan
                     volumeMounts:
                       - mountPath: /home/terraspin/opsmx/app/config/
+                        readOnly: true
                         name: opsmx-terraspin-backend-config
                 restartPolicy: Never
                 volumes:
-                  - configMap:
-                      name: terraspinbackendconfig
+                  - secret:
+                      secretName: terraspinbackendconfig
                     name: opsmx-terraspin-backend-config
+
       - label: TSApplyJob
         application: opsmx
         cloudProvider: kubernetes
-        credentials: default
+        credentials: target-aks-cluster
         description: Stage for terraspin apply operation
-        account: default
+        account: target-aks-cluster
         propertyFile: terraspinapply
         type: customTSApplyJobStage
         waitForCompletion: true
         parameters:
           - defaultValue: "" 
-            description: Please enter the artifact account name from artifactsaccounts.json.
-            label: Artifact account
+            description: "Please enter the artifact account name from artifactsaccounts.json, Account where you have tf script(plan) present".
+            label: Tf script account
             mapping: 'manifest.spec.template.spec.containers[0].env[0].value'
-            name: Artifact account
+            name: Tf script account
           - defaultValue: "" 
             description: Please enter overrideVariableFile path if you want to override variables.
             label: Override file
             mapping: 'manifest.spec.template.spec.containers[0].env[1].value'
             name: Override file
           - defaultValue: "" 
+            description: "Please enter the artifact account name from artifactsaccounts.json, Account where you want to save tf state".
+            label: Tf state account
+            mapping: 'manifest.spec.template.spec.containers[0].env[2].value'
+            name: Tf state account
+          - defaultValue: "" 
             description: Please enter the repo name where you want to save terraform intermediate state.
             label: State repo
-            mapping: 'manifest.spec.template.spec.containers[0].env[2].value'
+            mapping: 'manifest.spec.template.spec.containers[0].env[3].value'
             name: State repo
           - defaultValue: "" 
             description: Please enter a unique id to identify the terraform state.
             label: UUId
-            mapping: 'manifest.spec.template.spec.containers[0].env[3].value'
+            mapping: 'manifest.spec.template.spec.containers[0].env[4].value'
             name: UUId
-          - defaultValue: "" 
-            description: Please enter AWS IAM role name.
-            label: "iam.amazonaws.com/role"
-            mapping: "manifest.spec.template.metadata.annotations.'iam.amazonaws.com/role'"
-            name: "k8annotation"
         manifest:
           apiVersion: batch/v1
           kind: Job
@@ -124,17 +125,16 @@ job:
           spec:
             backoffLimit: 0
             template:
-              metadata:
-                annotations:
-                  "[iam.amazonaws.com/role]":
               spec:
                 containers:
                   - command:
                       - ApplyRun.sh
                     env:
-                      - name: artifactAccount
+                      - name: tfScriptArtifactAccount
                         value: 
                       - name: variableOverrideFileRepo
+                        value: 
+                      - name: tfStateArtifactAccount
                         value: 
                       - name: stateRepo
                         value: 
@@ -142,31 +142,33 @@ job:
                         value: 
                       - name: component
                         value: apply
-                    image: 'docker.io/opsmx11/terraspinjob:4.0'
+                    image: 'docker.io/opsmx11/terraspinjob:5.0'
                     imagePullPolicy: Always
                     name: terraspinapply
                     volumeMounts:
                       - mountPath: /home/terraspin/opsmx/app/config/
+                        readOnly: true
                         name: opsmx-terraspin-backend-config
                 restartPolicy: Never
                 volumes:
-                  - configMap:
-                      name: terraspinbackendconfig
+                  - secret:
+                      secretName: terraspinbackendconfig
                     name: opsmx-terraspin-backend-config
+
       - label: TSDestroyJob
         application: opsmx
         cloudProvider: kubernetes
-        credentials: default
+        credentials: target-aks-cluster
         description: Stage for terraspin destroy operation
-        account: default
+        account: target-aks-cluster
         type: customTSDestroyJobStage
         waitForCompletion: true
         parameters:
           - defaultValue: "" 
-            description: Please enter the artifact account name from artifactsaccounts.json.
-            label: Artifact account
+            description: "Please enter the artifact account name from artifactsaccounts.json, Account where you want to save tf state".
+            label: Tf state account
             mapping: 'manifest.spec.template.spec.containers[0].env[0].value'
-            name: Artifact account
+            name: Tf state account
           - defaultValue: "" 
             description: Please enter the repo name where you want to save terraform intermediate state.
             label: State repo
@@ -177,11 +179,6 @@ job:
             label: UUID
             mapping: 'manifest.spec.template.spec.containers[0].env[2].value'
             name: UUID
-          - defaultValue: "" 
-            description: Please enter AWS IAM role name.
-            label: "iam.amazonaws.com/role"
-            mapping: "manifest.spec.template.metadata.annotations.'iam.amazonaws.com/role'"
-            name: "k8annotation"
         manifest:
           apiVersion: batch/v1
           kind: Job
@@ -191,15 +188,12 @@ job:
           spec:
             backoffLimit: 0
             template:
-              metadata:
-                annotations:
-                  "[iam.amazonaws.com/role]":
               spec:
                 containers:
                   - command:
                       - DestroyRun.sh
                     env:
-                      - name: artifactAccount
+                      - name: tfStateArtifactAccount
                         value: 
                       - name: stateRepo
                         value: 
@@ -207,14 +201,15 @@ job:
                         value: 
                       - name: component
                         value: destroy
-                    image: 'docker.io/opsmx11/terraspinjob:4.0'
+                    image: 'docker.io/opsmx11/terraspinjob:5.0'
                     imagePullPolicy: Always
                     name: terraspindestroy
                     volumeMounts:
                       - mountPath: /home/terraspin/opsmx/app/config/
+                        readOnly: true
                         name: opsmx-terraspin-backend-config
                 restartPolicy: Never
                 volumes:
-                  - configMap:
-                      name: terraspinbackendconfig
+                  - secret:
+                      secretName: terraspinbackendconfig
                     name: opsmx-terraspin-backend-config
