--- a/spinterrajob-core/container/Dockerfile
+++ b/spinterrajob-core/container/Dockerfile
@@ -34,6 +34,11 @@ RUN wget https://releases.hashicorp.com/terraform/0.12.28/terraform_0.12.28_linu
     unzip -a terraform_0.12.28_linux_amd64.zip && \
     chmod +x terraform
 
+# Vault installation
+ RUN wget -O vault.zip https://releases.hashicorp.com/vault/1.7.0/vault_1.7.0_linux_amd64.zip  && \
+     unzip vault.zip && \
+     chmod +x vault
+
 RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" 
 
 RUN chmod +x kubectl
@@ -43,6 +48,13 @@ USER root
 RUN mv terraform /usr/local/bin/terraform
 
 RUN mv kubectl /usr/local/bin/kubectl
+
+RUN mv vault /usr/local/bin/vault
+
+RUN apt-get update && \
+    apt-get install -y vim
+
+RUN rm -rf vault.zip terraform_0.12.28_linux_amd64.zip 
 
 USER terraspin
 
